# rag_drias

./: .gitignore  Dockerfile  README.md  app.py  environment.yaml  main.py  pyproject.toml  requirements.txt  requirements_lint.txt
.github/workflows/: tests.yml
docs/: 1_download_data.md  2_database_construction.md  3_retrieval.md  4_generation.md  5_website.md
rag_drias/: app_utils.py  crawl.py  crawler.py  data.py  embedding.py  settings.py
tests/: test_rag.py
